--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-scroll-parallax": "^3.4.2",
     "redux-logger": "^3.0.6",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
